Terraform/modules/vpc/route_tables.tf

#Route tables

resource "aws_route_table" "public"{
  vpc_id = aws_vpc.this.id
  route{
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id

}

  tags = {Name = "${var.cluster_name}-public-rt"}

}

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.this.id
  route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nat.id
}
        tags = {Name = "${var.cluster_name}-private-rt"}
}


#Associate route tables

resource "aws_route_table_association" "public"{

  subnet_id = aws_subnet.public.id
  route_table_id = aws_route_table.public.id

}

resource "aws_route_table_association" "private"{

  count = length(var.private_subnet_cidr)
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id

}
